# blessing-skin-server

./: .babelrc  .bowerrc  .browserslistrc  .dockerignore  .editorconfig  .env.example  .env.laradock  .env.laradock.example  .env.testing  .eslintignore  .eslintrc.js  .eslintrc.yml  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .htaccess  .php-cs-fixer.dist.php  .php_cs.dist  .travis.yml  Cargo.toml  Dockerfile  Dockerfile_zh  ISSUE_TEMPLATE.md  LICENSE  README-en.md  README-zh.md  README.md  README_EN.md  ajax.php  apache.Dockerfile  artisan  azure-pipelines.yml  babel.config.js  babel.config.json  bower.json  check.php  circle.yml  composer.json  config.example.php  (+28 more)
.circleci/: config.yml
.devcontainer/: .env.devcontainer  Dockerfile  blessing-skin.apache.conf  devcontainer.json  docker-compose.yml
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  stale.yml
admin/: adduser.php  admin_ajax.php  customize.php  index.php  install.php  manage.php  options.php  update.php
app/: helpers.php
bootstrap/: autoload.php  chkenv.php  handler.php
config/: app.php  auth.php  broadcasting.php  cache.php  captcha.php  database.php  datatables.php  debugbar.php  filesystems.php  jwt.php  locales.php  logging.php  mail.php  menu.php  options.php  plugins.php  queue.php  routes.php  secure.php  services.php  session.php  translation-loader.php  twigbridge.php  update.php  view.php  yaml-translation.php
includes/: AdaptedDatabase.class.php  AuthmeDatabase.class.php  Config.class.php  CrazyDatabase.class.php  Database.class.php  DiscuzDatabase.class.php  (+12 more)
(+1531 files in other folders)
