[package]
name = "test"
version = "0.1.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"

[lib]
path = "tests/Api/tests/main.rs"
doctest = false

[dev-dependencies]
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dev-dependencies]
openssl = "0.10"
openssl-sys = "0.9"
